# UntitledQL

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.old/apps/main/constants/: enums.py
.old/apps/main/migrations/: 0002_user_role.py  0003_alter_user_role.py  0004_update_user_roles.py
.old/core/settings/: __init__.py
apitest/: __main__.py  client.py
apps/main/: admin.py
apps/main/constants/: enums.py
apps/main/managers/: users.py
apps/main/migrations/: 0001_initial.py  0002_user_role.py  0005_project.py
apps/main/models/: users.py
core/: __init__.py  urls.py
core/settings/: __init__.py  auth.py  db.py  security.py
docs/: README.md  functions.md  index.md  setup.md  writing-funcitons.md
docs/uql/: config.html  model.html  views.html
docs/uql/constants/: errors.html  types.html
docs/uql/exceptions/: index.html
docs/uql/utils/: index.html  query.html  select.html  templates.html  types.html
html/uql/: index.html
html/uql/constants/: index.html
html/uql/decorators/: index.html  intent.html
html/uql/intent/: index.html  model.html
tests/app/: .env  README.md  index.html  manage.py  package.json
tests/app/core/: config.py  settings.py  uqlc.py  urls.py
tests/app/core/settings/: __init__.py  djrf.py  security.py
tests/app/main/: tests.py
tests/app/main/configs/: README.md  notes.py  projects.py  users.py
tests/app/main/constants/: README.md
tests/app/main/functions/: README.md  __init__.py  auth.py  main.py  myfunc.py  test.py
tests/app/main/managers/: README.md  users.py
tests/app/main/migrations/: 0001_initial.py  0002_note_starred.py  README.md
tests/app/main/models/: README.md  __init__.py  notes.py  projects.py  users.py
tests/app/src/: App.vue  style.css
tests/app/src/composables/: auth.ts  navigation.ts
tests/app/src/models/: types.ts
tests/app/src/states/: Init.vue  Signup.vue
tests/app/src/states/Home/: CreateNote.vue  NoteItem.vue  index.vue
tests/app/src/uql/: uqlclient.ts
tests/units/: test_dto.py  test_query.py  test_select.py
uql/: __init__.py  apps.py  config.py  constants.py  intent.py  model.py  views.py
uql/constants/: __init__.py  errors.py  types.py
uql/decorators/: intent.py
uql/exceptions/: __init__.py
uql/functions/: __init__.py
uql/intent/: __init__.py  model.py
uql/models/: __init__.py  manager.py  serializers.py
uql/tests/: infrastructure.py
uql/utils/: dto.py  exceptions.py  query.py  select.py  templates.py
uqlts/: .gitignore  index.html  index.ts  package.json  test.ipynb  tsconfig.json
uqlts/src/: index.ts
