[tool.poetry]
name = "uql"
version = "0.1.1"
description = "Application layer for building Django apps with a breeze"
authors = ["rubbie kelvin voltsman <rubbiekelvinvoltsman@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-rest-framework = "^0.1.0"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
mypy = "^0.971"
ipython = "^8.4.0"
requests = "^2.28.1"
black = "^22.8.0"
typing-extensions = "^4.3.0"
pytest = "^7.1.3"
django-cors-headers = "^3.13.0"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/rubbieKelvin/pyrun
[pyrun.scripts]
test_api = "python tests/app/manage.py test main.tests"
test_unit = "python -m pytest --rootdir tests/units/"
dev = "python tests/app/manage.py runserver"
vue = "yarn --cwd tests/app dev"
migrate = "python tests/app/manage.py makemigrations main; python tests/app/manage.py migrate"
reset = 'pyrun reset:migration; pyrun reset:db'
reset_migration = "rm -r tests/app/**/migrations/"
reset_db = "rm tests/app/db.sqlite3"
super = "export DJANGO_SUPERUSER_PASSWORD=admin; python tests/app/manage.py createsuperuser --noinput --email admin@app.dev"
shell = "python tests/app/manage.py shell"
doc_html = "DJANGO_SETTINGS_MODULE=uql.__init__ pdoc --html -o docs -f uql"
doc_serve = "pyrun doc:html; cd docs/uql; python -m http.server 4347 --bind 127.0.0.1; cd ../../"